revert to pdf figures input for pdf book output

--- a/08-MY451-regression.Rmd
+++ b/08-MY451-regression.Rmd
@@ -322,9 +322,7 @@ examining associations between continuous variables, and often the only
 ones considered. In this chapter we too will focus almost completely on
 them.
 
-![(\#fig:f-scatterplots) Scatterplots of artificial data sets of two variables. Each plot also
-shows the best-fitting (least squares) straight line and the correlation
-coefficient $r$.](olspl1 "fig:"){width="8cm"} ![](olspl2){width="8cm"}\
+![(\#fig:f-scatterplots) Scatterplots of artificial data sets of two variables. Each plot also shows the best-fitting (least squares) straight line and the correlation coefficient $r$.](olspl1 "fig:"){width="8cm"} ![](olspl2){width="8cm"}\
 ![](olspl3){width="8cm"} ![](olspl4){width="8cm"}\
 ![](olspl5){width="8cm"} ![](olspl6){width="8cm"}\
 
