CI is working. Praise the glory of the lord.

--- a/05-MY451-probs.Rmd
+++ b/05-MY451-probs.Rmd
@@ -1,4 +1,4 @@
-# Inference for population proportions, yo mama {#c-probs}
+# Inference for population proportions {#c-probs}
 
 ## Introduction {#s-probs-intro}
 
