change dept, lse logo image in index.Rmd

--- a/index.Rmd
+++ b/index.Rmd
@@ -18,8 +18,7 @@ description: "This course is intended for those with little or no past training 
 
 \setcounter{page}{1}
 
-![image](dept_of_methodology){height="2.2cm"}
-\hfill![image](lse){height="2.2cm"}
+![image](dept_of_methodology){height="2.2cm"} \hfill![image](lse){height="2.2cm"}
 
 <center>**MY451: Introduction to Quantitative Analysis**</center>
 
