set global path for images in pdf output
using `\graphicspath{{./images/}}` in `template.latex

--- a/template.latex
+++ b/template.latex
@@ -12,6 +12,7 @@
 \setlength{\evensidemargin}{37mm}
 \setlength{\textwidth}{144mm}
 \setlength{\oddsidemargin}{37mm}
+\graphicspath{{./images/}}
 
 $if(fontfamily)$
 \usepackage[$for(fontfamilyoptions)$$fontfamilyoptions$$sep$,$endfor$]{$fontfamily$}
