--- a/08-MY451-regression.Rmd
+++ b/08-MY451-regression.Rmd
@@ -322,7 +322,7 @@ examining associations between continuous variables, and often the only
 ones considered. In this chapter we too will focus almost completely on
 them.
 
-![(\#fig:f-scatterplots)Scatterplots of artificial data sets of two variables. Each plot also shows the best-fitting (least squares) straight line and the correlation coefficient $r$.](scatterplots){width="16cm"}\
+![(\#fig:f-scatterplots)Scatterplots of artificial data sets of two variables. Each plot also shows the best-fitting (least squares) straight line and the correlation coefficient $r$.](scatterplots){width="16cm"}
 
 In plot (a) of Figure \@ref(fig:f-scatterplots) all the points are exactly on
 the straight line. This indicates a *perfect* linear association, where
