--- a/08-MY451-regression.Rmd
+++ b/08-MY451-regression.Rmd
@@ -115,10 +115,7 @@ and is often referred to as the **X-axis**. The vertical axis, here used
 for GDP per capita, then corresponds to the response variable $Y$, and
 is known as the **Y-axis**.
 
-![(\#fig:f-corruption1)A scatterplot of Control of corruption vs. GDP per capita in the
-Global Civil Society data set, for 61 countries with Control of
-corruption at least 60. The dotted lines are drawn to the point
-corresponding to the United Kingdom.](corruption1){width="14cm"}
+![(\#fig:f-corruption1)A scatterplot of Control of corruption vs. GDP per capita in the Global Civil Society data set, for 61 countries with Control of corruption at least 60. The dotted lines are drawn to the point corresponding to the United Kingdom.](corruption1){width="13.5cm"}
 
 The observed data are shown as points in the scatterplot, one for each
 of the $n$ units. The location of each point is determined by its values
@@ -191,8 +188,7 @@ it (except at the ends of the series, where fewer observations are
 used). This is done to smooth out short-term fluctuations from the
 data, so that longer-term trends become more clearly visible.]
 
-![(\#fig:f-temperatures)Changes of average annual temperature (11-year moving averages) from
-1903 in five locations. See the text for further details. Source: The GISTEMP database <data.giss.nasa.gov/gistemp/>](temperplot){width="13cm"}
+![(\#fig:f-temperatures)Changes of average annual temperature (11-year moving averages) from 1903 in five locations. See the text for further details. Source: The GISTEMP database <data.giss.nasa.gov/gistemp/>](temperplot){width="13cm"}
 
 
 Consider first the data for Haparanda only. Here we have two variables,
@@ -251,10 +247,7 @@ a rather informal discussion of how this might be done. This will lead
 directly to a more precise and formal definition introduced in Section
 \@ref(s-regression-simple).
 
-![(\#fig:f-corruption2)The same scatterplot of Control of corruption vs. GDP per capita as
-in Figure \@ref(fig:f-corruption1), augmented by the best-fitting (least
-squares) straight line (solid line) and reference lines for two example
-values of Control of corruption (dotted lines).](corruption2){width="13.5cm"}
+![(\#fig:f-corruption2)The same scatterplot of Control of corruption vs. GDP per capita as in Figure \@ref(fig:f-corruption1), augmented by the best-fitting (least squares) straight line (solid line) and reference lines for two example values of Control of corruption (dotted lines).](corruption2){width="13.5cm"}
 
 Figure \@ref(fig:f-corruption2) shows the same scatterplot as Figure
 \@ref(fig:f-corruption1). Consider first one value of $X$ (Control of
@@ -640,10 +633,7 @@ reason the correlations in Table \@ref(tab:t-imrvars) differ slightly from
 those in Table \@ref(tab:t-civilsoc-r), where each correlation was calculated
 for all the countries with non-missing values of that pair of variables.
 
-![(\#fig:f-imr1)A scatterplot of net primary school enrolment ratio vs. Infant
-mortality rate for countries in the Global Civil Society data set
-($n=111$). The solid line is the best-fitting (least squares) straight
-line for the points.](imr1){width="13.5cm"}
+![(\#fig:f-imr1)A scatterplot of net primary school enrolment ratio vs. Infant mortality rate for countries in the Global Civil Society data set ($n=111$). The solid line is the best-fitting (least squares) straight line for the points.](imr1){width="13.5cm"}
 
   ------------------------------------------------------------------ ------------------------------- ----------- ------------ ------------
   \                                                                                                \      School   Control of       Income
@@ -839,8 +829,7 @@ which completes the proof of the claims above — Q.E.D. In case you
 prefer a graphical summary, this is given in Figure
 \@ref(fig:f-linmod-params).
 
-![(\#fig:f-linmod-params)Illustration of the interpretation of the regression coefficients of a
-simple linear regression model.](lmparams){width="12.5cm"}
+![(\#fig:f-linmod-params)Illustration of the interpretation of the regression coefficients of a simple linear regression model.](lmparams){width="12.5cm"}
 
 The most important parameter of the model, and usually the only one
 really discussed in interpreting the results, is $\beta$, the regression
@@ -1462,9 +1451,7 @@ $X$ and $Y$, they will appear to be associated, but the connection is
 not a causal one. Instead, it is a **spurious association** induced by
 the dependence on both variables on the common cause $Z$.
 
-![(\#fig:f-xyzspurious)A graphical representation of a
-spurious association between $X$ and $Y$, explained by dependence on a
-common cause $Z$.](xyzspurious){width="3.7cm"}
+![(\#fig:f-xyzspurious)A graphical representation of a spurious association between $X$ and $Y$, explained by dependence on a common cause $Z$.](xyzspurious){width="3.7cm"}
 
 To illustrate a spurious association with a silly but memorable teaching
 example, suppose that we examine a sample of house fires in London, and
