--- a/08-MY451-regression.Rmd
+++ b/08-MY451-regression.Rmd
@@ -1246,7 +1246,7 @@ population which is parallel to the $X$-axis (see plot (d) of Figure
 The hypothesis (\@ref(eq:H0betasimple)) can thus be expressed in words as
 \begin{equation}H_{0}:\; \text{\emph{There is no
 linear association
-between}} X \text{\empgh{and}} Y \text{\emph{in the population}}.
+between}} X \text{\emph{and}} Y \text{\emph{in the population}}.
 \label{eq:H0betasimple2}\end{equation} Tests of this are usually carried out against a
 two-sided alternative hypothesis $H_{a}: \; \beta\ne 0$, and we will
 also concentrate on this case.
